deploy/k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexagen-web
  labels:
    app: hexagen-web
spec:
  type: ClusterIP
  selector:
    app: hexagen-web
  ports:
    - name: http
      port: 80
      targetPort: http
